--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 body {
-    color: rgb(124, 99, 70);
-    background: whitesmoke;
-}
+    color: rgba(255, 30, 0, 0.671);
+     background: rgb(0, 0, 0);
+     margin: 0px;
+ }
+ 
+ header {
+     border-bottom: solid 2px rgb(42, 122, 228);
+     padding: 20px;
+     font-size: 32px;
+     color: rgb(42, 122, 228);
+ }
+ 
+ section {
+     background: rgb(184,156,213);
+     padding-bottom: 80px;
+     padding-top: 80px;
+     display: flex;
+     justify-content: center;
+ }
+ 
+ .chamada-texto {
+     margin-right: 5%;
+ }
+
